bug 623974 - use GDI aliased spacing in DW when ClearType is off. r=bas a=joe